# chip8-rs

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/emulator/: audio.rs  display.rs  frontend.rs  memory.rs  mod.rs
core/src/emulator/cpu/: mod.rs  registers.rs
native_frontend/: Cargo.toml
native_frontend/src/: key_mapper.rs  main.rs  native_frontend.rs
src/: main.rs
src/emulator/: display.rs  keyboard.rs  mod.rs
src/emulator/cpu/: instruction.rs  mod.rs
src/emulator/display/: mod.rs
src/emulator/frontend/: mod.rs
src/emulator/frontend/native_window/: audio.rs  mod.rs
src/emulator/keyboard/: mod.rs
src/emulator/sound/: mod.rs
wasm_frontend/: Cargo.toml  LICENSE_MIT  README.md
wasm_frontend/src/: audio.rs  key_mapper.rs  lib.rs  wasm_frontend.rs
wasm_frontend/www/: package-lock.json  package.json
www/: index.html  index.js  package-lock.json
