[package]
name = "chip8-rs"
version = "0.1.0"
authors = ["Domenico Visconti <domenico.visconti@prima.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.23"
minifb = "0.19.1"
rand = "0.8.1"
cpal = "0.13.1"