[package]
name = "native_frontend"
version = "0.1.0"
authors = ["Domenico Visconti <domenico.visconti@prima.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
minifb = "0.19.1"
cpal = "0.14.2"
structopt = "0.3.21"
thiserror = "1.0.23"
